--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
