feat: :wrench: Enable cors
Configure the cors permissions

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongoose": "^8.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
