--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -28,6 +29,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.1",
+    "@types/nodemailer": "^6.4.17",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
