--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,26 @@
-#  Ignore node_modules
-node_modules
+# Node.js
+node_modules/
+dist/
+package-lock.json
 
-# Ignore .env file
+# TypeScript
+*.tsbuildinfo
+
+# Configuración del entorno
 .env
 
-# Ignore .DS_Store file
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs y editores
+.vscode/
+.idea/
 .DS_Store
+Thumbs.db
 
-# Ignore .vscode file
-.vscode
-
-# Ignore build file
-build
-
-# Ignore dist file
-dist
+# Ignore coverage
+coverage
